--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/6_1_searching_experiments.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/6_1_searching_experiments.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +84,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Experiments: 23\n",
+      "\n",
+      "active 443181974872084259 experiment_19\n",
+      "\n",
+      "\n",
+      "active 851538690532359983 experiment_18\n",
+      "\n",
+      "\n",
+      "active 512271479630755372 experiment_17\n",
+      "\n",
+      "\n",
+      "active 959004891941721572 experiment_16\n",
+      "\n",
+      "\n",
+      "active 101094962984091601 experiment_15\n",
+      "\n",
+      "\n",
+      "active 158787520019453103 experiment_14\n",
+      "\n",
+      "\n",
+      "active 735599720975711240 experiment_13\n",
+      "\n",
+      "\n",
+      "active 964826619976755711 experiment_12\n",
+      "\n",
+      "\n",
+      "active 269578401663020978 experiment_11\n",
+      "\n",
+      "\n",
+      "active 947889381713255297 experiment_10\n",
+      "\n",
+      "\n",
+      "active 576234119453430777 experiment_9\n",
+      "\n",
+      "\n",
+      "active 878828554532126971 experiment_8\n",
+      "\n",
+      "\n",
+      "active 502934585859009531 experiment_7\n",
+      "\n",
+      "\n",
+      "active 728701252564212245 experiment_6\n",
+      "\n",
+      "\n",
+      "active 987340435858407786 experiment_5\n",
+      "\n",
+      "\n",
+      "deleted 832273921396073933 experiment_4\n",
+      "\n",
+      "\n",
+      "deleted 649711598343110982 experiment_3\n",
+      "\n",
+      "\n",
+      "deleted 506009792524263651 experiment_2\n",
+      "\n",
+      "\n",
+      "deleted 451153972387370699 experiment_1\n",
+      "\n",
+      "\n",
+      "deleted 779428325797684534 experiment_0\n",
+      "\n",
+      "\n",
+      "active 131424986827395711 creating-experiments-new\n",
+      "\n",
+      "\n",
+      "active 262686110326234862 renamed-experiment\n",
+      "\n",
+      "\n",
+      "active 0 Default\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# search for all experiments and print them. view_type=mlflow.tracking.client.ViewType.ALL\n",
     "\n",
@@ -100,9 +178,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Active Experiments: 18 \n",
+      "\n",
+      "active 443181974872084259 experiment_19\n",
+      "\n",
+      "\n",
+      "active 851538690532359983 experiment_18\n",
+      "\n",
+      "\n",
+      "active 512271479630755372 experiment_17\n",
+      "\n",
+      "\n",
+      "active 959004891941721572 experiment_16\n",
+      "\n",
+      "\n",
+      "active 101094962984091601 experiment_15\n",
+      "\n",
+      "\n",
+      "active 158787520019453103 experiment_14\n",
+      "\n",
+      "\n",
+      "active 735599720975711240 experiment_13\n",
+      "\n",
+      "\n",
+      "active 964826619976755711 experiment_12\n",
+      "\n",
+      "\n",
+      "active 269578401663020978 experiment_11\n",
+      "\n",
+      "\n",
+      "active 947889381713255297 experiment_10\n",
+      "\n",
+      "\n",
+      "active 576234119453430777 experiment_9\n",
+      "\n",
+      "\n",
+      "active 878828554532126971 experiment_8\n",
+      "\n",
+      "\n",
+      "active 502934585859009531 experiment_7\n",
+      "\n",
+      "\n",
+      "active 728701252564212245 experiment_6\n",
+      "\n",
+      "\n",
+      "active 987340435858407786 experiment_5\n",
+      "\n",
+      "\n",
+      "active 131424986827395711 creating-experiments-new\n",
+      "\n",
+      "\n",
+      "active 262686110326234862 renamed-experiment\n",
+      "\n",
+      "\n",
+      "active 0 Default\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# search for all active experiments and print them. view_type=mlflow.tracking.client.ViewType.ACTIVE_ONLY\n",
     "\n",
@@ -117,9 +258,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted Experiments: 5 \n",
+      "\n",
+      "deleted 832273921396073933 experiment_4\n",
+      "\n",
+      "\n",
+      "deleted 649711598343110982 experiment_3\n",
+      "\n",
+      "\n",
+      "deleted 506009792524263651 experiment_2\n",
+      "\n",
+      "\n",
+      "deleted 451153972387370699 experiment_1\n",
+      "\n",
+      "\n",
+      "deleted 779428325797684534 experiment_0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# search for deleted experiments and print them. view_type=mlflow.tracking.client.ViewType.DELETED_ONLY\n",
     "deleted_experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.DELETED_ONLY)\n",
@@ -140,9 +305,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted Experiments: 4 \n",
+      "\n",
+      "active 443181974872084259 experiment_19\n",
+      "\n",
+      "\n",
+      "active 851538690532359983 experiment_18\n",
+      "\n",
+      "\n",
+      "active 512271479630755372 experiment_17\n",
+      "\n",
+      "\n",
+      "active 959004891941721572 experiment_16\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "active_experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.ACTIVE_ONLY, max_results=4)\n",
     "print(f\"Deleted Experiments: {len(active_experiments)} \\n\")\n",
@@ -169,9 +355,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Active experiments: 2\n",
+      "\n",
+      "active 443181974872084259 experiment_19\n",
+      "\n",
+      "\n",
+      "active 851538690532359983 experiment_18\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "active_experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.ACTIVE_ONLY, max_results=2, order_by=[\"creation_time DESC\"])\n",
     "print(f\"Active experiments: {len(active_experiments)}\\n\")\n",
@@ -189,9 +390,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments: 1\n",
+      "\n",
+      "deleted 451153972387370699 experiment_1\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.ALL, max_results=2, filter_string=\"name = 'experiment_1'\")\n",
     "print(f\"Experiments: {len(experiments)}\\n\")\n",
@@ -211,9 +424,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments: 3\n",
+      "\n",
+      "active 987340435858407786 experiment_5 {'algorithm_type': 'tree', 'data_quality': 'low', 'data_size': 'small', 'data_source': 'csv', 'data_type': 'structured', 'inference_type': 'batch', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 576234119453430777 experiment_9 {'algorithm_type': 'neural network', 'data_quality': 'low', 'data_size': 'medium', 'data_source': 'api', 'data_type': 'structured', 'inference_type': 'batch', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 101094962984091601 experiment_15 {'algorithm_type': 'ensemble', 'data_quality': 'high', 'data_size': 'medium', 'data_source': 'streaming', 'data_type': 'structured', 'inference_type': 'batch', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.ACTIVE_ONLY,\n",
     "                                        max_results=10,\n",
@@ -235,9 +466,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments: 2\n",
+      "\n",
+      "active 158787520019453103 experiment_14 {'algorithm_type': 'ensemble', 'data_quality': 'medium', 'data_size': 'small', 'data_source': 'cloud', 'data_type': 'structured', 'inference_type': 'batch', 'mlflow.note.content': 'This is a note', 'project_type': 'experiment', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 959004891941721572 experiment_16 {'algorithm_type': 'neural network', 'data_quality': 'low', 'data_size': 'large', 'data_source': 'csv', 'data_type': 'structured', 'inference_type': 'batch', 'mlflow.note.content': 'This is a note', 'project_type': 'research', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.ACTIVE_ONLY,\n",
     "                                        max_results=10,\n",
@@ -259,9 +505,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments: 5\n",
+      "\n",
+      "active 728701252564212245 experiment_6 {'algorithm_type': 'tree', 'data_quality': 'high', 'data_size': 'medium', 'data_source': 'streaming', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 878828554532126971 experiment_8 {'algorithm_type': 'tree', 'data_quality': 'medium', 'data_size': 'small', 'data_source': 'database', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'development', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 269578401663020978 experiment_11 {'algorithm_type': 'tree', 'data_quality': 'low', 'data_size': 'small', 'data_source': 'cloud', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 512271479630755372 experiment_17 {'algorithm_type': 'neural network', 'data_quality': 'high', 'data_size': 'small', 'data_source': 'streaming', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'development', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 443181974872084259 experiment_19 {'algorithm_type': 'neural network', 'data_quality': 'medium', 'data_size': 'medium', 'data_source': 'csv', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.ACTIVE_ONLY,\n",
     "                                        max_results=10,\n",
@@ -283,9 +553,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments: 5\n",
+      "\n",
+      "active 728701252564212245 experiment_6 {'algorithm_type': 'tree', 'data_quality': 'high', 'data_size': 'medium', 'data_source': 'streaming', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 878828554532126971 experiment_8 {'algorithm_type': 'tree', 'data_quality': 'medium', 'data_size': 'small', 'data_source': 'database', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'development', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 269578401663020978 experiment_11 {'algorithm_type': 'tree', 'data_quality': 'low', 'data_size': 'small', 'data_source': 'cloud', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 512271479630755372 experiment_17 {'algorithm_type': 'neural network', 'data_quality': 'high', 'data_size': 'small', 'data_source': 'streaming', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'development', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n",
+      "active 443181974872084259 experiment_19 {'algorithm_type': 'neural network', 'data_quality': 'medium', 'data_size': 'medium', 'data_source': 'csv', 'data_type': 'semi-structured', 'inference_type': 'online', 'mlflow.note.content': 'This is a note', 'project_type': 'production', 'random_experiment': 'yes'}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = mlflow.search_experiments(view_type=mlflow.tracking.client.ViewType.ACTIVE_ONLY,\n",
     "                                        max_results=10,\n",
@@ -322,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
