--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/6_3_searching_models.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/6_3_searching_models.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/05 13:01:57 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:01:57 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Successfully registered model 'model_1'.\n",
+      "Created version '1' of model 'model_1'.\n",
+      "2025/12/05 13:02:01 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:02:01 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'model_1' already exists. Creating a new version of this model...\n",
+      "Created version '2' of model 'model_1'.\n",
+      "2025/12/05 13:02:04 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:02:04 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'model_1' already exists. Creating a new version of this model...\n",
+      "Created version '3' of model 'model_1'.\n",
+      "2025/12/05 13:02:07 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:02:07 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'model_1' already exists. Creating a new version of this model...\n",
+      "Created version '4' of model 'model_1'.\n",
+      "2025/12/05 13:02:11 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:02:11 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Successfully registered model 'model_2'.\n",
+      "Created version '1' of model 'model_2'.\n",
+      "2025/12/05 13:02:14 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:02:14 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'model_2' already exists. Creating a new version of this model...\n",
+      "Created version '2' of model 'model_2'.\n",
+      "2025/12/05 13:02:17 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:02:17 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'model_2' already exists. Creating a new version of this model...\n",
+      "Created version '3' of model 'model_2'.\n",
+      "2025/12/05 13:02:21 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/05 13:02:21 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'model_2' already exists. Creating a new version of this model...\n",
+      "Created version '4' of model 'model_2'.\n"
+     ]
+    }
+   ],
    "source": [
     "create_registered_models_batch(n_models=3, n_versions=5)"
    ]
@@ -83,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ModelVersion: aliases=[], creation_timestamp=1764936127831, current_stage='None', description=None, last_updated_timestamp=1764936127831, name='model_1', run_id='110947266e4148a6b0984c51015fafe0', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/110947266e4148a6b0984c51015fafe0/artifacts/model', status='READY', status_message=None, tags={'task_type': 'classification', 'validation_status': 'in progress'}, user_id=None, version=4>,\n",
+       " <ModelVersion: aliases=[], creation_timestamp=1764936124407, current_stage='None', description=None, last_updated_timestamp=1764936124407, name='model_1', run_id='b1e5b45deefe4fa9b4f8920078e39b94', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/b1e5b45deefe4fa9b4f8920078e39b94/artifacts/model', status='READY', status_message=None, tags={'task_type': 'classification', 'validation_status': 'in progress'}, user_id=None, version=3>,\n",
+       " <ModelVersion: aliases=[], creation_timestamp=1764936121228, current_stage='None', description=None, last_updated_timestamp=1764936121228, name='model_1', run_id='cceac21c751244c39fd1d134cbd4d51a', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/cceac21c751244c39fd1d134cbd4d51a/artifacts/model', status='READY', status_message=None, tags={'task_type': 'classification', 'validation_status': 'completed'}, user_id=None, version=2>,\n",
+       " <ModelVersion: aliases=[], creation_timestamp=1764936117711, current_stage='None', description=None, last_updated_timestamp=1764936117711, name='model_1', run_id='d57882f406f34c5da960d8772b520647', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/d57882f406f34c5da960d8772b520647/artifacts/model', status='READY', status_message=None, tags={'task_type': 'classification', 'validation_status': 'failed'}, user_id=None, version=1>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_versions\n",
     "    "
@@ -102,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,9 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ModelVersion: aliases=[], creation_timestamp=1764936141301, current_stage='None', description=None, last_updated_timestamp=1764936141301, name='model_2', run_id='074fc649124247f8a019176652777349', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/074fc649124247f8a019176652777349/artifacts/model', status='READY', status_message=None, tags={'task_type': 'clustering', 'validation_status': 'in progress'}, user_id=None, version=4>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_versions"
    ]
@@ -127,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,9 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ModelVersion: aliases=[], creation_timestamp=1764936141301, current_stage='None', description=None, last_updated_timestamp=1764936141301, name='model_2', run_id='074fc649124247f8a019176652777349', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/074fc649124247f8a019176652777349/artifacts/model', status='READY', status_message=None, tags={'task_type': 'clustering', 'validation_status': 'in progress'}, user_id=None, version=4>,\n",
+       " <ModelVersion: aliases=[], creation_timestamp=1764936127831, current_stage='None', description=None, last_updated_timestamp=1764936127831, name='model_1', run_id='110947266e4148a6b0984c51015fafe0', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/110947266e4148a6b0984c51015fafe0/artifacts/model', status='READY', status_message=None, tags={'task_type': 'classification', 'validation_status': 'in progress'}, user_id=None, version=4>,\n",
+       " <ModelVersion: aliases=[], creation_timestamp=1764936124407, current_stage='None', description=None, last_updated_timestamp=1764936124407, name='model_1', run_id='b1e5b45deefe4fa9b4f8920078e39b94', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/b1e5b45deefe4fa9b4f8920078e39b94/artifacts/model', status='READY', status_message=None, tags={'task_type': 'classification', 'validation_status': 'in progress'}, user_id=None, version=3>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_versions"
    ]
@@ -165,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +251,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registered model:\n",
+      "model_2\n",
+      "Tags:\n",
+      "{'model_owner': 'Alice', 'model_type': 'random_forest', 'organization': 'Umbrella'}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for registered_model in registered_models:\n",
     "    print(\"Registered model:\")\n",
@@ -188,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registered model:\n",
+      "model_2\n",
+      "Tags:\n",
+      "{'model_owner': 'Alice', 'model_type': 'random_forest', 'organization': 'Umbrella'}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for registered_model in registered_models:\n",
     "    print(\"Registered model:\")\n",
@@ -208,6 +311,13 @@
     "    print(registered_model.tags)\n",
     "    print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -226,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
